--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,11 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# local database
+quiz.db
+quiz.db-shm
+quiz.db-wal
+
 # vercel
 .vercel
 
