--- a/vercel.json
+++ b/vercel.json
@@ -6,5 +6,13 @@
       "src": "package.json",
       "use": "@vercel/next"
     }
-  ]
+  ],
+  "functions": {
+    "src/app/api/players/route.ts": {
+      "maxDuration": 10
+    }
+  },
+  "env": {
+    "USE_SUPABASE": "true"
+  }
 }
